--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <h1>Sprawdź PESEL</h1>
     <p id="message">Sprawdź PESEL</p>
 
+    <label for="pesel">Wprowadź numer PESEL:</label>
+    <input type="text" id="pesel" maxlength="11" placeholder="Wprowadź PESEL">
+    <button onclick="waliduj()">Sprawdź</button>
+
+    <p id="wynik"></p>
+
     <!-- Dołączanie pliku JavaScript -->
     <script src="pesel.js"></script>
 </body>
